--- a/src/components/ShowProject.css
+++ b/src/components/ShowProject.css
@@ -37,7 +37,7 @@
 
 
 .action-button button:hover {
-  background-color: #928A97; /* un tono de azul un poco más oscuro para el hover */
+  background-color: #928A97; 
 }
 
 .action-button:hover {
@@ -58,19 +58,19 @@
 }
 
 .boton-crear button {
-  border: none; /* quitar borde */
-  background-color: #928A97; /* color de fondo azul, por ejemplo */
+  border: none;
+  background-color: #928A97; 
   border-radius: 5px;
-  color: white; /* color de texto blanco */
-  font-size: 16px; /* tamaño de letra */
-  padding: 10px 20px; /* espacio interno, superior-inferior y izquierdo-derecho respectivamente */
+  color: white; 
+  font-size: 16px; 
+  padding: 10px 20px;
   cursor: pointer; /* estilo del cursor al pasar sobre el botón */
   transition: 0.3s; /* animación suave al cambiar estilos, opcional */
 }
 
 /* Estilo adicional al pasar el cursor sobre el botón, opcional */
 .boton-crear button:hover {
-  background-color: #F44336; /* un tono de azul un poco más oscuro para el hover */
+  background-color: #F44336; /* un tono diferente para el hover */
 }
 
 
